Adding support for api.User - providing the api.models.User and api.models.UserManager - accessing api.User instead of django.contrib.auth.models.User - creating/querying/accessing users via account_number and org_id - replacing username with a unique uuid for the user objects - updated docs-api-examples
